[update] z-index fixed

--- a/Sass/TaggingPageStyles.scss
+++ b/Sass/TaggingPageStyles.scss
@@ -175,8 +175,7 @@ body {
     }
   }
 
-  .publicPage__filterContainer,
-  .container {
+  .publicPage__filterContainer {
     width: 100%;
     height: 7%;
 
